# notion-cli

./: .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MCP.md  README.md  fast_mcp.md  pyproject.toml
.github/workflows/: release.yml
src/notion_cli/: __init__.py  client.py  config.py  filters.py  llm.py  main.py  mcp_accounts.py  mcp_cache.py  mcp_server.py  notion_data.py  views.py
tests/: test_mcp_server.py
